--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <i class="fa fa-bars" onclick="showmenu()"></i>
             </nav>
             <div class="text-box">
-                <h1>The Foundation</h1>
+                <h1>The Kiran Foundation</h1>
                 <p>...Healing a Hurting world... </p>
               <a href="https://rzp.io/l/tigA7BOsO" class="hero-btn">DONATE NOW</a>
             </div>
